Fixed a lot of responsive bugs on iOS

--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -20,6 +20,8 @@
 
 @media (max-width: 1024px) {
   .layout {
+    display: block;
+
     main {
       padding: 90px 30px 30px 30px;
     }
